[package]
name = "nutrinow"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc.2", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
uuid  = { version = "0.8", features = ["v4"] }
chrono = "0.4"
sqlx = { version = "0.5", features = ["chrono", "uuid"] }
rocket_db_pools = { version = "0.1.0-rc.2", features = ["sqlx_postgres"] }
sha2 = "0.10.6"
