[package]
name = "nutrinow"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
doctest = false

[dependencies]
anyhow = "1.0"
pest_generator = "2.6" # Necessary to make the 'config' crate work
config = "0.13"
serde = { version = "1.0", features = ["derive"] }
sha2 = "0.10"
log = "0.4"
env_logger = "0.10"
chrono = { version = "0.4", features = ["serde"] }
cookie = "0.17"
actix-web = { version = "4", features = ["cookies"] }
actix-files = "0.6"
uuid = { version = "1.3", features = ["v4"] }
sqlx = { version = "0.6", features = ["runtime-actix-rustls", "chrono", "uuid", "postgres"] }
regex = "1.0"
once_cell = "1.18"
